--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,15 +14,18 @@ services:
       - DB_PASS=qwe123!@#
       - PYSPARK_PYTHON=python3
       - PYSPARK_DRIVER_PYTHON=python3
+
     volumes:
       - .:/app
-      - ./jars:/opt/spark/jars
+      - ./jars:/app/jars
+
     networks:
       - etl_network
     ports:
       - "8888:8888"  # Jupyter port
     command: >
-      jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root --notebook-dir=/app
+      jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root --NotebookApp.token='' --notebook-dir=/app
+
 
   sqlserver:
     image: mcr.microsoft.com/mssql/server:2019-latest
